# plast-blog

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/blog_project/blog_app/: models.py  serializers.py  urls.py  views.py
backend/blog_project/blog_app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_post_category.py
backend/config/: authentication.py  settings.py  urls.py  wsgi.py
backend/plast-blog/: Dockerfile  db.sqlite3  pyproject.toml
backend/plast-blog/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/plast-blog/plast/blog/: urls.py  views.py
backend/plast-blog/plast/blog/migrations/: 0001_initial.py
backend/plast-blog/plast/polls/migrations/: 0001_initial.py
backend/plast/blog/: apps.py  models.py  serializers.py
frontend/: .env.production  index.html  package.json  tailwind.config.cjs  vercel.json  vite.config.ts
frontend/plast-blog/: .env  .env.production  .gitignore  package.json  tailwind.config.cjs  vite.config.ts
frontend/plast-blog/src/: routeTree.gen.ts
frontend/plast-blog/src/api/: auth.ts  (+3 more)
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/api/: auth.ts  axiosInstance.ts  post.ts
frontend/src/components/: AnimatedWaveDivider.tsx  NotFoundComponent.tsx  PrivateRoute.tsx  ProtectedRoute.tsx  RotatingStarsCanvas.tsx  Toolbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: __root.tsx  star.tsx  write.tsx
frontend/src/styles/: globals.css  style.scss
frontend/src/utils/: translator.tsx
(+21 files in other folders)
